--- a/manifest.json
+++ b/manifest.json
@@ -10,13 +10,13 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/924/924514.png",
+      "src": "https://i.postimg.cc/mD7XFm9L/Boundaries-Logo-Icon.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/924/924514.png",
+      "src": "https://i.postimg.cc/mD7XFm9L/Boundaries-Logo-Icon.png",
       "sizes": "512x512",
       "type": "image/png"
     }
