--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boundaries-logbook-and-training",
+  "name": "brewshift",
   "private": true,
   "version": "0.0.0",
   "type": "module",
